--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  .nav-link {
+    @apply inline-flex items-center py-6 px-3 mr-4 text-white hover:text-yellow-400 text-lg 2xl:text-2xl font-shadow-light font-bold;
+  }
+}
