--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
     @apply inline-flex items-center py-6 md:px-3 md:mr-4 text-white hover:text-yellow-400 text-base md:text-lg 2xl:text-2xl font-shadow-light font-bold;
   }
   .section-container {
-    @apply mx-auto  md:w-11/12 w-5/6 my-4;
+    @apply w-5/6 md:w-11/12 mx-auto my-4;
   }
   .page-heading {
     @apply text-2xl flex justify-center font-shadow-light text-gray-600 mt-10 mb-4;
